kubernetes/app1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  labels:
    name: app1-deploy
    app: kuberentes-node
spec:
  selector:
    matchLabels:
      name: app1-deploy
      app: kuberentes-node
  replicas: 5
  template:
    metadata:
      name: app1-deploy
      labels:
        name: app1-deploy
        app: kuberentes-node
    spec:
      containers:
        - name: app1-deploy
          image: mohamedumar/kubernetes-node
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-login-cred

---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    name: app1-service
    app: kuberentes-node
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: app1-deploy
    app: kuberentes-node
