kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "devops-dev.provility.com"
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: app1-service
                port:
                  number: 80
            pathType: Prefix
    - host: "devops-prod.provility.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
